<resources>
    <string name="app_name">TRCardManager</string>
    <string name="deveolper_email1">amcereijo@gmail.com</string>
    <string name="login_email_hint">email</string>
    <string name="login_password_hint">password</string>
    <string name="login_btn_enter">Enter</string>
    <string name="login_empty_message">You must type email and password.</string>
    <string name="login_error_message">Email and/or password incorrect</string>
    <string name="login_error_connection_message">Network problems. Try again.</string>
    <string name="login_error_connection_error">Connection problems Try again.</string>
    <string name="login_rememberme">Remember me</string>
    <string name="loggin_load_dialog_title">Log in</string>
    <string name="loggin_load_dialog_text">Logging in system&#8230;</string>
    <string name="session_expired">Session expired. You must log in again</string>
    <string name="login_recover_password"><u>Forgot your password?</u></string>
    <string name="recover_password_btn">Recover password</string>
    <string name="recover_password_btn_clicked">Sending request&#8230;</string>
    <string name="recover_password_exception_connection">Network problems!</string>
    <string name="recover_password_exception_user">User do not exist</string>
    <string name="recover_password_exception_other">Unknown error</string>
    <string name="recover_password_error_no_email">Email is required</string>
    <string name="recover_password_ok">Check your email to get the new password.\nRemember change your password from "My account" menu.</string>
    <string name="loadcards_load_dialog_title">Card</string>
    <string name="loadcards_load_dialog_text">Loading your data&#8230;</string>
    <string name="cards_list_card_title">Card: </string>
    <string name="cards_list_card_balance">Balance: </string>
    <string name="cards_list_card_balance_symbol">€</string>
    <string name="imagen_icon_text">Menu</string>
    <string name="activate_card_error">Card can not be active. Please, check the card number and be sure the card was activated by phone.</string>
    <string name="exit_dialog_question_title">Close application</string>
    <string name="exit_dialog_question_message">Do you want close application?</string>
    <string name="exit_dialog_question_yes">Yes</string>
    <string name="exit_dialog_question_no">No</string>
    <string name="logout_dialog_question_title">Log out</string>
    <string name="logout_dialog_question_message">Do you want close session?</string>
    <string name="logout_dialog_question_yes">Yes</string>
    <string name="logout_dialog_question_no">No</string>
    <string name="card_hour_date_separator">-</string>
    <string name="pull_to_refresh_pull_label">Pull to load more&#8230;</string>
    <string name="pull_to_refresh_release_label">Release to load more&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">Loading&#8230;</string>
    <string name="pull_to_refresh_tap_label">Tap load more&#8230;</string>
    <string name="push_to_refresh_push_label">Pull to refresh&#8230;</string>
    <string name="push_to_refresh_release_label">Release to refresh&#8230;</string>
    <string name="push_to_refresh_refreshing_label">Loading&#8230;</string>
    <string name="push_to_refresh_tap_label">Tap to refresh&#8230;</string>
    <string name="separator_text">Historical</string>
    <string name="principal_menu_my_account">My Account</string>
    <string name="principal_menu_settings">Settings</string>
    <string name="principal_menu_logout">Log out</string>
    <string name="principal_menu_restaurant">Restaurants</string>
    <string name="principal_menu_about">About</string>
    <string name="about_version_title">TRCardManager - About</string>
    <string name="about_version">Version</string>
    <string name="about_developer">XilvirSoft</string>
    <string name="about_application">\nThe application allows you to check the balance on your ticketrestaurant card in the same way that could be done on the web.\n
		It displays the current balance of the card, last 45 days movements and historical movements until 1 January of the previous year.\n
		To view more entries in the list, you only must drag the current list upwards and automatically more movements will be loaded.\n
		If you have the application open and make a payment, simply drag the list of movements down to load the recent payment.\n
		In the context menu you can also manage your card number and access password, you can also search restaurants or change application preferences.
		I hope this is useful and you can enjoy its use.\n\n</string>
    <string name="about_application_icon">Application icon</string>
    <string name="about_button_feedback_text"><u>Send opinion</u></string>
    <string name="feed_back_no_intention_found">There are no email clients installed.</string>
    <string name="update_card_title">Update card</string>
    <string name="update_card_cardnumber_text">new card number</string>
    <string name="update_card_btn_update">Update</string>
    <string name="update_card_error_card_size">The card number must be 16 digits</string>
    <string name="update_card_loading_message_title">Update card</string>
    <string name="update_card_loading_message_message">Updating card information</string>
    <string name="update_card_dialog_error_button">Close</string>
    <string name="myaccount_tab_title">TRCardManager - My Account</string>
    <string name="myaccount_tab_update_car_tab_title">Update Card</string>
    <string name="myaccount_tab_update_password_tab_title">Change Password</string>
    <string name="update_data_errors_user_not_exists">The user not exist or user given low</string>
    <string name="update_data_errors_card_not_exist">The card not exist</string>
    <string name="update_data_errors_card_associated">The card is associated with another user</string>
    <string name="update_data_errors_card_different_profile">Card with different to the user profile</string>
    <string name="update_password_error">The password could not be changed</string>
    <string name="update_password_title">Change Password</string>
    <string name="update_password_hint">new password</string>
    <string name="update_password_confirm_hint">confirm new password</string>
    <string name="update_password_btn_update">Change</string>
    <string name="update_password_savedb_text">Save new password (if \"Remember me\" is checked)</string>
    <string name="update_password_error_pass">You must enter a new password</string>
    <string name="update_password_error_pass_confirm">You must enter a password confirmation</string>
    <string name="update_password_error_equal_passs">The passwords don\'t match</string>
    <string name="update_password_dialog_title">Change password</string>
    <string name="update_password_dialog_update_http">Updating data</string>
    <string name="update_password_dialog_update_db">Saving data</string>
    <string name="update_password_dialog_error_button">Close</string>
    <string name="update_password_changed">The password has been successfully updated.</string>
    <string name="settings_title">TRCardManager - Settings</string>
    <string name="settings_check_autologin">Autologin</string>
    <string name="settings_check_ask_exit">Confirmation when application close</string>
    <string name="restaurants_search">Restaurants by direction/name</string>
    <string name="restaurants_location">Restaurants in location</string>
    <string name="restaurants_title">TRCardManager - Restaurants</string>
    <string name="restaurants_select_search_type">Select search type</string>
    <string name="restaurants_search_direction">Street,CP,City,&#8230;</string>
    <string name="restaurants_search_restaurant">Restaurant Name</string>
    <string name="restaurants_search_text_button">Search</string>
    <string name="restaurants_search_text_empty">You must type a direction</string>
    <string name="restaurants_no_gps_title">GPS</string>
    <string name="restaurants_no_gps_message">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="restaurants_no_gps_yes">Yes</string>
    <string name="restaurants_no_gps_no">No</string>
    <string name="restaurants_dialog_location_title">Location</string>
    <string name="restaurants_dialog_location_message">Waiting for actual location&#8230;</string>
    <string name="restaurants_dialog_search_title">Restaurants</string>
    <string name="restaurants_dialog_search_message">Looking for restaurants in %s&#8230;</string>
    <string name="restaurants_dialog_search_more_message">Looking for more restaurants in %s&#8230;</string>
    <string name="restaurants_dialog_search_message_location">Looking for restaurants in your area&#8230;</string>
    <string name="restaurants_dialog_search_message_afiliate_foodtype" formatted="false">Looking for restaurants %s with food type %s at %s &#8230;</string>
    <string name="restaurants_dialog_search_message_afiliate" formatted="false">Looking for restaurants %s at %s&#8230;</string>
    <string name="restaurants_dialog_search_message_foodtype" formatted="false">Looking for restaurants %s with food type %s&#8230;</string>
    <string name="restaurants_dialog_search_more_message_location">Looking for more restaurants in your area&#8230;</string>
    <string name="restaurants_dialog_search_more_message_afiliate_foodtype" formatted="false">Looking for more restaurants %s with food type %s in %s &#8230;</string>
    <string name="restaurants_dialog_search_more_message_afiliate" formatted="false">Looking for more restaurants %s in %s&#8230;</string>
    <string name="restaurants_dialog_search_more_message_foodtype" formatted="false">Looking for more restaurants %s with food type %s&#8230;</string>
    <string name="restaurants_dialog_direction_title">Restaurants</string>
    <string name="restaurants_dialog_direction_message">Locating direction&#8230;</string>
    <string name="restaurants_search_error">Some problem has happened looking for restaurants, please try again&#8230;</string>
    <string name="restaurants_search_adv_locality">Locality</string>
    <string name="restaurants_search_adv_locality_hint">locality</string>
    <string name="restaurants_search_adv_area">Area</string>
    <string name="restaurants_search_adv_area_hint">area</string>
    <string name="restaurants_search_adv_postal_code">Postal Code</string>
    <string name="restaurants_search_adv_postal_code_hint">postal Code</string>
    <string name="restaurants_search_adv_trade">Establishment</string>
    <string name="restaurants_search_adv_trade_hint">establishment</string>
    <string name="restaurants_search_adv_street">Street</string>
    <string name="restaurants_search_adv_cook_type">Cuisine</string>
    <string name="restaurants_search_adv_stret_hint">name, number,...</string>
    <string name="restaurants_search_adv_no_data_in">Type some data to search</string>
    <string name="restaurants_search_list_title_afiliate_foodtype" formatted="false">%s with food type %s at %s</string>
	<string name="restaurants_search_list_title_afiliate" formatted="false">%s at %s</string>
	<string name="restaurants_search_list_title_foodtype" formatted="false">%s with food type %s</string>
    <string-array name="street_types">
        <item> </item>
        <item>CL</item>
		<item>AV</item>
		<item>GV</item>
		<item>CT</item>
		<item>RB</item>
		<item>PZ</item>
		<item>TR</item>
		<item>PG</item>
		<item>PO</item>
		<item>RD</item>
		<item>LG</item>
		<item>CM</item>
		<item>AL</item>
		<item>PJ</item>
		<item>BO</item>
		<item>PI</item>
		<item>BV</item>
		<item>PQ</item>
		<item>GL</item>
		<item>RA</item>
		<item>CJ</item>
    </string-array>
</resources>