<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/principal_menu_myaccount"
        android:icon="@drawable/password_update_tab"
        android:title="@string/principal_menu_my_account" />
    
    <item android:id="@+id/principal_menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/principal_menu_settings" />
    
    <item android:id="@+id/principal_menu_restaurant"
        android:icon="@drawable/menu_restaurant"
        android:title="@string/principal_menu_restaurant" />
    
    <item android:id="@+id/principal_menu_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/principal_menu_logout" />
    
    <item android:id="@+id/principal_menu_about"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/principal_menu_about"  />
</menu>