<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#2A4678"
    android:orientation="vertical">

    <TextView
        android:id="@+id/principal_menu_myaccount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:onClick="clickMenuOption"
        android:paddingBottom="10sp"
        android:paddingLeft="10sp"
        android:paddingRight="16sp"
        android:paddingTop="10sp"
        android:text="@string/principal_menu_my_account"
        android:textColor="#2A4678"
        android:textSize="18sp"
        android:typeface="serif"
        android:background="@drawable/menu_layout_item_background"
        android:layout_marginBottom="1sp"/>

    <TextView
        android:id="@+id/principal_menu_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:onClick="clickMenuOption"
        android:paddingBottom="10sp"
        android:paddingLeft="10sp"
        android:paddingRight="16sp"
        android:paddingTop="10sp"
        android:text="@string/principal_menu_settings"
        android:textColor="#2A4678"
        android:textSize="18sp"
        android:typeface="serif"
        android:background="@drawable/menu_layout_item_background"
        android:layout_marginBottom="1sp" />

    <TextView
        android:id="@+id/principal_menu_restaurant"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:onClick="clickMenuOption"
        android:paddingBottom="10sp"
        android:paddingLeft="10sp"
        android:paddingRight="16sp"
        android:paddingTop="10sp"
        android:text="@string/principal_menu_restaurant"
        android:textColor="#2A4678"
        android:textSize="18sp"
        android:typeface="serif"
        android:background="@drawable/menu_layout_item_background"
        android:layout_marginBottom="1sp" />

    <TextView
        android:id="@+id/principal_menu_logout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:onClick="clickMenuOption"
        android:paddingBottom="10sp"
        android:paddingLeft="10sp"
        android:paddingRight="16sp"
        android:paddingTop="10sp"
        android:text="@string/principal_menu_logout"
        android:textColor="#2A4678"
        android:textSize="18sp"
        android:typeface="serif"
        android:background="@drawable/menu_layout_item_background"
        android:layout_marginBottom="1sp" />

    <TextView
        android:id="@+id/principal_menu_about"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:onClick="clickMenuOption"
        android:paddingBottom="10sp"
        android:paddingLeft="10sp"
        android:paddingRight="16sp"
        android:paddingTop="10sp"
        android:text="@string/principal_menu_about"
        android:textColor="#2A4678"
        android:textSize="18sp"
        android:typeface="serif"
        android:background="@drawable/menu_layout_item_background" />

</LinearLayout>