<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10sp"
	android:background="#18376C">
	
    <TextView android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:textColor="@android:color/white"
	        android:text="@string/app_name"
	        android:typeface="serif"
	        android:textStyle="bold"
	        android:textSize="32sp"
	        android:layout_marginBottom="8sp"/>
    
	<!--  Email Label -->
	<!-- <TextView android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@android:color/white"
	        android:text="@string/login_email_title"/> -->
	<EditText android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5sp"
	        android:layout_marginBottom="20sp"
	        android:layout_marginLeft="10sp"
	        android:layout_marginRight="10sp"
	        android:layout_gravity="center_horizontal"
	        android:singleLine="true"
	        android:id="@+id/login_email"
	        android:hint="@string/login_email_hint"
	        android:textColor="#18376C"
	        android:background="@drawable/login_text_border"/>
	
	<!--  Password Label -->
	<!-- <TextView android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@android:color/white"
	        android:text="@string/login_password_title"/> -->
	
	<EditText android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5sp"
	        android:layout_marginLeft="10sp"
	        android:layout_marginRight="10sp"
	        android:layout_gravity="center_horizontal"
	        android:singleLine="true"
	        android:inputType="textPassword"
	        android:id="@+id/login_password"
	        android:textColor="#18376C"
	        android:hint="@string/login_password_hint"
	        android:background="@drawable/login_text_border"/>
	
	<LinearLayout android:orientation="horizontal"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:background="#18376C"
	    android:layout_marginTop="5sp"
	    android:layout_marginLeft="10sp"
	    android:padding="0sp">
		<CheckBox android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="0sp"
	        android:id="@+id/login_rememberme"/>
		<TextView android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@android:color/white"
	        android:text="@string/login_rememberme"/>
	</LinearLayout>
	<!-- Login button -->
	<Button android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10sp"
	        android:layout_marginLeft="10sp"
	        android:layout_marginRight="10sp"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/login_btn_enter"
	        android:id="@+id/btn_login_enter"
	        android:onClick="doLogin"
	        android:clickable="true"
	        android:textColor="#FFFFFF"
	        android:typeface="serif"
	        android:textStyle="bold"
	        android:background="@drawable/login_btn_border"/>
	
	
	    <TextView android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:gravity="center_horizontal"
	        android:layout_marginTop="8sp"
	        android:textColor="#FFFFFF"
	        android:layout_marginLeft="10sp"
	        android:layout_marginRight="10sp"
	        android:id="@+id/error_login_text_view"
	        android:visibility="gone"/>
	
	
</LinearLayout>