<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#18376C" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6sp" >

            <ImageButton
                android:id="@+id/about_icon_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="10sp"
                android:background="@drawable/icon_btn_border"
                android:contentDescription="@string/about_application_icon"
                android:maxHeight="120sp"
                android:maxWidth="160sp"
                android:src="@drawable/about_application_icon" />

            <TextView
                android:id="@+id/about_version_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_icon_layout"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal|center_vertical"
                android:paddingTop="4sp"
                android:text="@string/about_version"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/about_version_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_icon_layout"
                android:layout_toRightOf="@id/about_version_text"
                android:paddingLeft="2sp"
                android:paddingTop="4sp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/about_developer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_version_text"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:paddingTop="4sp"
                android:text="@string/about_developer"
                android:textColor="@android:color/white" />
            
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_button_feedback_text"
                android:layout_marginTop="4sp"
                android:id="@+id/about_button_opinon"
                android:onClick="showFeedBackInput"
                android:layout_below="@id/about_developer_text"
                android:layout_centerInParent="true"
                android:background="@null"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>
            
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2sp"
            android:background="@android:color/darker_gray"
            android:paddingBottom="10sp" />

        <TextView
            android:id="@+id/about_application_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:paddingLeft="6sp"
            android:paddingRight="6sp"
            android:gravity="left"
            android:text="@string/about_application"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>