<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#2A4678" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10sp" >
        
        <EditText
            android:id="@+id/update_password_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20sp"
            android:layout_marginLeft="14sp"
            android:layout_marginRight="14sp"
            android:layout_marginTop="30sp"
            android:background="@drawable/login_text_border"
            android:hint="@string/update_password_hint"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="#2A4678" />
        
        <EditText
            android:id="@+id/update_password_text_confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20sp"
            android:layout_marginLeft="14sp"
            android:layout_marginRight="14sp"
            android:layout_marginTop="5sp"
            android:background="@drawable/login_text_border"
            android:hint="@string/update_password_confirm_hint"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="#2A4678" 
            android:ellipsize="end"/>
        
         <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14sp"
            android:layout_marginTop="5sp"
            android:background="#2A4678"
            android:orientation="horizontal"
            android:padding="0sp" >

            <CheckBox
                android:id="@+id/update_password_savedb"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="0sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_password_savedb_text"
                android:textColor="@android:color/white"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical" />
        </LinearLayout>
        
         <Button
            android:id="@+id/update_password_btn_update"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="14sp"
            android:layout_marginRight="14sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/buttom_background"
            android:clickable="true"
            android:onClick="onClickUpdatePasswordButton"
            android:text="@string/update_password_btn_update"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:typeface="serif" />
        
	</LinearLayout>
	
</ScrollView>